@@ -1,26 +1,26 @@
 FROM alpine:3.19.1 as packager
 
-RUN apk --no-cache add openjdk11-jdk openjdk11-jmods binutils
+ARG USER_NAME=$USER_NAME
 
-ENV JAVA_MINIMAL=/opt/jre
+# Install required minimal JRE packages for Java 11, 17, and 21
+RUN apk add --no-cache openjdk11-jre-headless openjdk17-jre-headless openjdk21-jre-headless && \
+    export JAVA_HOME_11=$(dirname $(dirname $(readlink $(readlink $(which java))))) && \
+    export JAVA_HOME_17=$(dirname $(dirname $(readlink $(readlink $(which java))))) && \
+    export JAVA_HOME_21=$(dirname $(dirname $(readlink $(readlink $(which java))))) && \
+    export PATH=$JAVA_HOME_11/bin:$JAVA_HOME_17/bin:$JAVA_HOME_21/bin:$PATH
 
-# build minimal JRE
-RUN /usr/lib/jvm/java-11-openjdk/bin/jlink \
-    --verbose \
-    --add-modules \
-        java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument,jdk.crypto.ec,jdk.zipfs,jdk.unsupported \
-    --compress 2 --strip-debug --no-header-files --no-man-pages \
-    --release-info="add:IMPLEMENTOR=radistao:IMPLEMENTOR_VERSION=radistao_JRE" \
-    --output "$JAVA_MINIMAL"
+# Create a non-root user
+RUN adduser -D $USER_NAME
 
-# Second stage, add only our minimal "JRE" distr and our app
-FROM alpine:3.19.1
-ENV JAVA_MINIMAL=/opt/jre
-ENV PATH="$PATH:$JAVA_MINIMAL/bin"
-COPY --from=packager "$JAVA_MINIMAL" "$JAVA_MINIMAL"
-# Create the app user
-ARG USER_NAME=app_user
-ARG USER_GROUP=$USER_NAME
-RUN apk update && apk upgrade && apk add --no-cache bash \
-    && addgroup -S $USER_GROUP && adduser -S -G $USER_GROUP $USER_NAME --shell /bin/bash
+# Set the default user
 USER $USER_NAME
+
+# Print installed Java versions
+RUN java -version && \
+    javac -version
+
+# Set the default Java version
+ENV JAVA_HOME $JAVA_HOME_21
+
+# Command to run when the container starts
+CMD ["java", "-version"]
